--- a/rps.html
+++ b/rps.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="rps.css">
 
-  <title>Rock, Paper, Scissors: JQuery</title>
+  <title>Rock, Paper, Scissors</title>
 </head>
 <body>
 
@@ -20,25 +20,30 @@
     <div id="score">Player: 0<br>Computer: 0<br>Total: 0</div>
     <h3>Let's Play</h3>
     <h2>Rock, Paper, Scissors</h2>
-        <div class="row-md">
-          <div class="btn-group btn-group-lg" role="group" aria-label="Make your choice">
-            <button type="button" class="btn btn-default" onclick="playerChoice('rock')">Rock</button>
-            <button type="button" class="btn btn-default" onclick="playerChoice('paper')">Paper</button>
-            <button type="button" class="btn btn-default" onclick="playerChoice('scissors')">Scissors</button>
-          </div>
-        </div>
-      <p id="compChoice"></p>
-      <p id="result"></p>
+    <div class="row-md">
+      <div class="btn-group btn-group-lg" role="group" aria-label="Make your choice">
+        <button id="btn-rock" type="button" class="btn btn-default" onclick="playerChoice('rock')">Rock</button>
+        <button id="btn-paper" type="button" class="btn btn-default" onclick="playerChoice('paper')">Paper</button>
+        <button id="btn-scissors" type="button" class="btn btn-default" onclick="playerChoice('scissors')">Scissors</button>
+      </div>
+    </div>
+    <p>
+      <button id="btn-reset" type="button" class="btn btn-danger" onclick="resetGame()">Reset Game</button>
+    </p>
+    <p id="comp-choice"></p>
+    <p id="result"></p>
+    <h2 id="game-end-message"></h2>
   </div>
 
   <!-- JQuery -->
-  <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-  <!-- JQueryUi -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+    type="text/javascript">
+  </script>
+  <!-- JQueryUI -->
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"
-      type="text/javascript"></script>
+    type="text/javascript">
+  </script>
+  <!-- my stuff -->
   <script src="rps.js"></script>
 </body>
 </html>
